--- a/Lab2/CMakeLists.txt
+++ b/Lab2/CMakeLists.txt
@@ -66,3 +66,6 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
 
     # Add user defined libraries
 )
+
+# Enable float formatting in newlib nano printf
+target_link_options(${CMAKE_PROJECT_NAME} PRIVATE -u _printf_float)
